remove yellowbrick install

--- a/Weeks/02_Sept27/04-housing-regression.ipynb
+++ b/Weeks/02_Sept27/04-housing-regression.ipynb
@@ -482,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install yellowbrick"
+    "# Need to install yellowbrick if you don't have it"
    ]
   },
   {
