add to requirements

--- a/Weeks/02_Sept27/04-housing-regression.ipynb
+++ b/Weeks/02_Sept27/04-housing-regression.ipynb
@@ -560,6 +560,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aside\n",
+    "\n",
+    "When we consider feature engineering later, we'll want to consider whether some of the variables are dependent.  And exactly what happens when we have multicollinearity of the variables.\n",
+    "\n",
+    "Multicollinearity may not have an effect on the predictive power of our model, but it can affect the variance of our coefficient estimates, lead to larger confidence intervals, and make it more difficult to interpret the predictors of our final model.\n",
+    "\n",
+    "Here we briefly show how to identify whether variables might suffer from collinearity by measuring the variance inflation factor (VIF) -- values of 1 are ignorable, < 5 are reasonable, and > 5 should be dealt with."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myfeatures.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vif = pd.DataFrame()\n",
+    "vif['VIF'] = [round(variance_inflation_factor(myfeatures.values, i), 2) for i in range(myfeatures.shape[1])]\n",
+    "vif['variable'] = myfeatures.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vif.sort_values(by='VIF', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Back to our learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
