update deets of week 4

--- a/Weeks/04_Oct11/01-tree-classification-blobs.ipynb
+++ b/Weeks/04_Oct11/01-tree-classification-blobs.ipynb
@@ -16,7 +16,8 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "import sklearn.tree\n",
     "from sklearn.inspection import DecisionBoundaryDisplay\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from dtreeviz.trees import dtreeviz"
    ]
   },
   {
@@ -225,6 +226,22 @@
     "               feature_names=['x0','x1'],  \n",
     "               class_names=[str(i) for i in tree_clf.classes_],\n",
     "               filled=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9b9e1df-968d-440b-9c69-f11f7b27cb91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,8))\n",
+    "dtreeviz(tree_clf, \n",
+    "         df[['x0','x1']], \n",
+    "         df['y'],\n",
+    "         feature_names=['x0','x1'],\n",
+    "         class_names=[i for i in tree_clf.classes_],\n",
+    "         target_name=\"y\")"
    ]
   },
   {
