--- a/Weeks/04_Oct11/02-tree-extended-regression.ipynb
+++ b/Weeks/04_Oct11/02-tree-extended-regression.ipynb
@@ -1086,9 +1086,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(12,8))\n",
     "dtreeviz(model, \n",
-    "         x_train_transformed, \n",
-    "         y_train,\n",
+    "         x.reshape(-1,1), \n",
+    "         y_with_noise,\n",
     "         feature_names=['x'],\n",
     "         class_names=['y'],\n",
     "         target_name=\"y\")"
