--- a/Weeks/04_Oct11/03-tree-regression-penguins.ipynb
+++ b/Weeks/04_Oct11/03-tree-regression-penguins.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.pairplot(data=penguins)"
+    "sns.pairplot(data=penguins, hue='species')"
    ]
   },
   {
