--- a/Weeks/05_Oct18/01-voting.ipynb
+++ b/Weeks/05_Oct18/01-voting.ipynb
@@ -22,10 +22,12 @@
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "import sklearn.tree\n",
+    "from sklearn.tree import export_text, plot_tree\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.inspection import DecisionBoundaryDisplay\n",
     "from sklearn.model_selection import train_test_split\n",
-    "#from dtreeviz.trees import dtreeviz"
+    "from sklearn.metrics import accuracy_score\n",
+    "from dtreeviz.trees import dtreeviz"
    ]
   },
   {
@@ -163,8 +165,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tree_clf = DecisionTreeClassifier()\n",
-    "\n",
     "tree_clf = DecisionTreeClassifier(max_depth=4)"
    ]
   },
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_representation = sklearn.tree.export_text(tree_clf)\n",
+    "text_representation = export_text(tree_clf)\n",
     "print(text_representation)"
    ]
   },
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12,8))\n",
-    "sklearn.tree.plot_tree(tree_clf, \n",
+    "plot_tree(tree_clf, \n",
     "               feature_names=['x0','x1'],  \n",
     "               class_names=[str(i) for i in tree_clf.classes_],\n",
     "               filled=True);"
@@ -243,6 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture --no-display\n",
+    "\n",
     "plt.figure(figsize=(12,8))\n",
     "dtreeviz(tree_clf, \n",
     "         df[['x0','x1']], \n",
@@ -300,12 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the knn classification model\n",
-    "\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "knn_clf = KNeighborsClassifier(n_neighbors=10)\n",
-    "# knn_clf = KNeighborsClassifier()"
+    "knn_clf = KNeighborsClassifier(n_neighbors=10)"
    ]
   },
   {
@@ -315,8 +312,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the decision tree classification model\n",
-    "\n",
     "knn_clf.fit(x_train, y_train)"
    ]
   },
@@ -372,8 +367,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the accuracy of the model\n",
-    "\n",
     "classifiers = [knn_clf, logreg_clf, tree_clf]\n",
     "\n",
     "for i in classifiers:\n",
@@ -410,16 +403,6 @@
    "outputs": [],
    "source": [
     "voting_clf.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c7a00d3-0065-48bd-8fc2-77f43ecd9307",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -622,8 +605,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split into training/test sets\n",
-    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x[['mean radius','mean texture']], \n",
     "                                                    x['target'], \n",
     "                                                    random_state=0)"
@@ -636,8 +617,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the logistic regression model\n",
-    "\n",
     "logreg_clf = LogisticRegression()"
    ]
   },
@@ -648,8 +627,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the logistic regression model\n",
-    "\n",
     "logreg_clf.fit(x_train, y_train)"
    ]
   },
@@ -706,8 +683,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the decision tree classification model\n",
-    "\n",
     "tree_clf = DecisionTreeClassifier(max_depth=3)"
    ]
   },
@@ -718,8 +693,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the decision tree classification model\n",
-    "\n",
     "tree_clf.fit(x_train, y_train)"
    ]
   },
@@ -805,9 +778,7 @@
     "print('Predicted Class:',tree_clf.predict(sample))\n",
     "\n",
     "y_pred_proba = tree_clf.predict_proba(sample)\n",
-    "print('Predicted Probabilies of Class Membership: ',y_pred_proba)\n",
-    "\n",
-    "pd.Series(y_pred_proba[0], index=tree_clf.classes_).plot.bar()"
+    "print('Predicted Probabilies of Class Membership: ',y_pred_proba)"
    ]
   },
   {
@@ -825,8 +796,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the knn classification model\n",
-    "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "knn_clf = KNeighborsClassifier(n_neighbors=10)"
@@ -839,8 +808,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the decision tree classification model\n",
-    "\n",
     "knn_clf.fit(x_train, y_train)"
    ]
   },
@@ -883,14 +850,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "398ac609-cf51-4824-8b13-902887683907",
+   "metadata": {},
+   "source": [
+    "## Looking at the majority vote"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "96473de4-5572-483d-ba9e-49585d806124",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the accuracy of the model\n",
-    "\n",
     "classifiers = [knn_clf, logreg_clf, tree_clf]\n",
     "\n",
     "for clf in classifiers:\n",
@@ -942,6 +915,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6f01982-52b7-42e9-bd24-6a079707a364",
+   "metadata": {},
+   "source": [
+    "## Add in another classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f31d63ac-9252-4de9-91ba-95022d0c0f0e",
@@ -985,7 +966,7 @@
    "outputs": [],
    "source": [
     "voting_clf = VotingClassifier(\n",
-    "    estimators=[('lr', logreg_clf), ('knn', knn_clf), ('tr', tree_clf)],\n",
+    "    estimators=[('lr', logreg_clf), ('knn', knn_clf), ('tr', tree_clf), ('svm', svm_clf)],\n",
     "    voting='hard')\n",
     "\n",
     "voting_clf.fit(x_train, y_train)\n",
@@ -1006,7 +987,7 @@
    "outputs": [],
    "source": [
     "votingsoft_clf = VotingClassifier(\n",
-    "    estimators=[('lr', logreg_clf), ('knn', knn_clf), ('tr', tree_clf)],\n",
+    "    estimators=[('lr', logreg_clf), ('knn', knn_clf), ('tr', tree_clf), ('svm', svm_clf)],\n",
     "    voting='soft')\n",
     "\n",
     "voting_clf.fit(x_train, y_train)\n",
@@ -1066,8 +1047,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split into training/test sets\n",
-    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, \n",
     "                                                    y, \n",
     "                                                    random_state=0)"
@@ -1080,11 +1059,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the knn classification model\n",
-    "\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "# knn_clf = KNeighborsClassifier(n_neighbors=3)\n",
     "knn_clf = KNeighborsClassifier(n_neighbors=1)"
    ]
   },
@@ -1095,8 +1069,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the decision tree classification model\n",
-    "\n",
     "knn_clf.fit(x_train, y_train)"
    ]
   },
@@ -1166,8 +1138,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split into training/test sets\n",
-    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, \n",
     "                                                    y, \n",
     "                                                    random_state=0)"
@@ -1180,11 +1150,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the knn classification model\n",
-    "\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "# knn_clf = KNeighborsClassifier(n_neighbors=5)\n",
     "knn_clf = KNeighborsClassifier()"
    ]
   },
@@ -1195,8 +1160,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the decision tree classification model\n",
-    "\n",
     "knn_clf.fit(x_train, y_train)"
    ]
   },
@@ -1256,8 +1219,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the logistic regression model\n",
-    "\n",
     "logreg_clf.fit(x_train, y_train)"
    ]
   },
@@ -1305,8 +1266,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the logistic regression model\n",
-    "\n",
     "tree_clf = DecisionTreeClassifier()"
    ]
   },
@@ -1317,8 +1276,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the logistic regression model\n",
-    "\n",
     "tree_clf.fit(x_train, y_train)"
    ]
   },
@@ -1366,8 +1323,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the accuracy of the model\n",
-    "\n",
     "classifiers = [knn_clf, logreg_clf, tree_clf]\n",
     "\n",
     "for clf in classifiers:\n",
