--- a/Weeks/05_Oct18/03-bagging-sklearn.ipynb
+++ b/Weeks/05_Oct18/03-bagging-sklearn.ipynb
@@ -28,8 +28,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "#from dtreeviz.trees import dtreeviz"
+    "from dtreeviz.trees import dtreeviz"
    ]
   },
   {
@@ -79,8 +78,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split into training/test sets\n",
-    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, \n",
     "                                                    y, \n",
     "                                                    random_state=0)"
@@ -93,8 +90,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the knn classification model\n",
-    "\n",
     "knn_clf = KNeighborsClassifier()\n",
     "logreg_clf = LogisticRegression()\n",
     "tree_clf = DecisionTreeClassifier()"
@@ -267,6 +262,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44aa6c1a-894e-46ad-b1cf-b62afd861ad2",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9c5e603e-76ee-4628-bd94-8cc73fa658dd",
@@ -395,7 +398,7 @@
     "np.random.seed(42)\n",
     "noise = np.random.normal(0,1.5,100)\n",
     "\n",
-    "y = x + 0.2*x**2 + noise"
+    "y = x + noise #0.3*(x-5)**3 + noise"
    ]
   },
   {
@@ -451,6 +454,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85cecd3c-08da-4de5-b370-25cbb0ac620d",
+   "metadata": {},
+   "source": [
+    "## Decision Tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b36ef50a-8256-4358-b99e-5c7e73fdfa35",
@@ -477,13 +488,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98098548-0ff0-499a-86f8-9009d01bf6d5",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e1d6bb94-06b8-4f85-9cb4-002c42ee9678",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_reg = sklearn.ensemble.RandomForestRegressor()\n",
+    "rf_reg = sklearn.ensemble.RandomForestRegressor(n_jobs=-1,\n",
+    "                                                random_state=42)\n",
     "rf_reg.fit(x_train,y_train)\n",
     "print('R2 score: ',rf_reg.score(x_test, y_test))"
    ]
@@ -509,7 +529,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_reg = sklearn.ensemble.RandomForestRegressor(max_depth=3)\n",
+    "rf_reg = sklearn.ensemble.RandomForestRegressor(max_depth=3,\n",
+    "                                                n_jobs=-1,\n",
+    "                                                random_state=42)\n",
     "rf_reg.fit(x_train,y_train)\n",
     "print('R2 score: ',rf_reg.score(x_test, y_test))"
    ]
