--- a/Weeks/05_Oct18/04-random-forest-xgboost.ipynb
+++ b/Weeks/05_Oct18/04-random-forest-xgboost.ipynb
@@ -124,7 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(x.data, x.target, test_size=0.2, random_state=123)"
+    "x_train, x_test, y_train, y_test = train_test_split(x.data, \n",
+    "                                                    x.target, \n",
+    "                                                    test_size=0.2, \n",
+    "                                                    random_state=123)"
    ]
   },
   {
@@ -144,12 +147,12 @@
    "source": [
     "lin_reg = LinearRegression()\n",
     "\n",
-    "lin_reg.fit(X_train, y_train)\n",
+    "lin_reg.fit(x_train, y_train)\n",
     "\n",
-    "test_score = lin_reg.score(X_test, y_test)\n",
+    "test_score = lin_reg.score(x_test, y_test)\n",
     "print(f\"R2 of Linear Regression: {test_score:.2f}\")\n",
     "\n",
-    "preds = lin_reg.predict(X_test)\n",
+    "preds = lin_reg.predict(x_test)\n",
     "rmse = np.sqrt(mean_squared_error(y_test, preds))\n",
     "print(\"RMSE: %f\" % (rmse))"
    ]
@@ -169,14 +172,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rnd_clf = RandomForestClassifier(n_estimators=500, \n",
+    "rf_reg = RandomForestRegressor(n_estimators=500, \n",
     "                                 max_leaf_nodes=16, \n",
     "                                 n_jobs=-1,\n",
     "                                 random_state=42)\n",
-    "rnd_clf.fit(x_train, y_train)\n",
+    "rf_reg.fit(x_train, y_train)\n",
     "\n",
-    "y_pred_rf = rnd_clf.predict(x_test)\n",
-    "accuracy_score(y_test, y_pred_rf)"
+    "test_score = rf_reg.score(x_test, y_test)\n",
+    "print(f\"R2 of Random Forest: {test_score:.2f}\")\n",
+    "\n",
+    "preds = rf_reg.predict(x_test)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, preds))\n",
+    "print(\"RMSE: %f\" % (rmse))"
    ]
   },
   {
@@ -189,10 +196,10 @@
     "cv_grid = GridSearchCV(RandomForestRegressor(n_jobs=-1,random_state=42),\n",
     "                       param_grid = {\n",
     "                           'max_depth' : [10,20],\n",
-    "                           'n_estimators' : [250, 500],\n",
+    "                           'n_estimators' : [200],\n",
     "                           'max_leaf_nodes' : [8, 16]\n",
     "                       })\n",
-    "cv_grid.fit(X_train, y_train)\n",
+    "cv_grid.fit(x_train, y_train)\n",
     "cv_grid.best_params_"
    ]
   },
@@ -203,9 +210,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_predict = cv_grid.predict(X_test)\n",
+    "y_predict = cv_grid.predict(x_test)\n",
     "r2score = r2_score(y_test,y_predict)\n",
-    "print('R2 of the best regressor after CV is %.2f' % (r2score))"
+    "print('R2 of the best Random Forest regressor after CV is %.2f' % (r2score))"
    ]
   },
   {
@@ -248,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xg_reg.fit(X_train,y_train)"
+    "xg_reg.fit(x_train,y_train)"
    ]
   },
   {
@@ -258,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = xg_reg.predict(X_test)"
+    "preds = xg_reg.predict(x_test)"
    ]
   },
   {
@@ -268,21 +275,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_score = xg_reg.score(x_test, y_test)\n",
+    "print(f\"R2 of XGBoost: {test_score:.2f}\")\n",
+    "\n",
     "rmse = np.sqrt(mean_squared_error(y_test, preds))\n",
     "print(\"RMSE: %f\" % (rmse))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ffa7349-94cc-4d76-93c7-006a823e0195",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print the R2 score of the model\n",
-    "\n",
-    "test_score = xg_reg.score(X_test, y_test)\n",
-    "print(f\"R2 of XGBoost: {test_score:.2f}\")"
    ]
   },
   {
@@ -308,8 +305,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dmatrix_train = xgb.DMatrix(data=X_train,label=y_train)\n",
-    "data_dmatrix_test = xgb.DMatrix(data=X_test,label=y_test)"
+    "data_dmatrix_train = xgb.DMatrix(data=x_train,\n",
+    "                                 label=y_train)\n",
+    "data_dmatrix_test = xgb.DMatrix(data=x_test,\n",
+    "                                label=y_test)"
    ]
   },
   {
@@ -413,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xg_reg.fit(X_train,y_train)"
+    "xg_reg.fit(x_train,y_train)"
    ]
   },
   {
@@ -423,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = xg_reg.predict(X_test)"
+    "preds = xg_reg.predict(x_test)"
    ]
   },
   {
@@ -433,21 +432,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_score = xg_reg.score(x_test, y_test)\n",
+    "print(f\"R2 of XGBoost: {test_score:.2f}\")\n",
+    "\n",
     "rmse = np.sqrt(mean_squared_error(y_test, preds))\n",
     "print(\"RMSE: %f\" % (rmse))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a75af333-5bdf-44ab-8a5d-a05e2cbf978e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print the R2 score of the model\n",
-    "\n",
-    "test_score = xg_reg.score(X_test, y_test)\n",
-    "print(f\"R2 of XGBoost: {test_score:.2f}\")"
    ]
   },
   {
@@ -471,7 +460,6 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "xgb.plot_tree(xg_reg,num_trees=0)\n",
-    "plt.rcParams['figure.figsize'] = [50, 10]\n",
     "plt.show()"
    ]
   },
@@ -498,12 +486,7 @@
     "                  'max_depth': [5,10,20],\n",
     "                  'alpha': [5,10]}\n",
     "\n",
-    "clf = GridSearchCV(xg_reg, params, n_jobs=-1)\n",
-    "# , \n",
-    "#                    cv=StratifiedKFold(train['QuoteConversion_Flag'], n_folds=5, shuffle=True), \n",
-    "#                    scoring='roc_auc',\n",
-    "#                    verbose=2, \n",
-    "#                    refit=True)"
+    "xg_reg_best = GridSearchCV(xg_reg, params, n_jobs=-1)"
    ]
   },
   {
@@ -513,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.fit(X_train, y_train)"
+    "xg_reg_best.fit(x_train, y_train)"
    ]
   },
   {
@@ -525,7 +508,7 @@
    "source": [
     "# print the R2 score of the model\n",
     "\n",
-    "test_score = clf.score(X_test, y_test)\n",
+    "test_score = xg_reg_best.score(x_test, y_test)\n",
     "print(f\"R2 of Linear Regression: {test_score:.2f}\")"
    ]
   },
@@ -536,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.best_params_"
+    "xg_reg_best.best_params_"
    ]
   },
   {
@@ -546,7 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_predict = clf.predict(X_test)"
+    "y_predict = xg_reg_best.predict(x_test)"
    ]
   },
   {
@@ -566,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_predict = clf.predict(X_test)\n",
+    "y_predict = xg_reg_best.predict(x_test)\n",
     "r2score = r2_score(y_test,y_predict)\n",
     "print('R2 of the best regressor after CV is %.2f' % (r2score))"
    ]
@@ -580,7 +563,7 @@
    "source": [
     "# print the R2 score of the model\n",
     "\n",
-    "test_score = clf.score(X_test, y_test)\n",
+    "test_score = xg_reg_best.score(x_test, y_test)\n",
     "print(f\"R2 of XGBoost: {test_score:.2f}\")"
    ]
   },
@@ -591,9 +574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the R2 score of the model\n",
-    "\n",
-    "test_score = lin_reg.score(X_test, y_test)\n",
+    "test_score = lin_reg.score(x_test, y_test)\n",
     "print(f\"R2 of Linear Regression: {test_score:.2f}\")"
    ]
   },
@@ -604,7 +585,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(clf)"
+    "print(xg_reg_best)"
    ]
   },
   {
@@ -624,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xg_reg = xgb.train(params=clf.best_params_, \n",
+    "xg_reg = xgb.train(params=xg_reg_best.best_params_, \n",
     "                   dtrain=data_dmatrix_train, \n",
     "                   num_boost_round=1000)"
    ]
@@ -662,7 +643,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import VotingClassifier\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -708,8 +690,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the knn classification model\n",
-    "\n",
     "knn_clf = KNeighborsClassifier()\n",
     "logreg_clf = LogisticRegression()\n",
     "tree_clf = DecisionTreeClassifier()"
@@ -940,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
